--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,6 +12,9 @@
               <a class="nav-link" href="/alunos">Alunos</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/acoes_educacionais">Ações Educacionais</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/about">Sobre</a>
             </li>
           </ul>
