get acoes educacionais.

--- a/views/form_acoes.hbs
+++ b/views/form_acoes.hbs
@@ -27,11 +27,11 @@
 
 <select class="form-select" aria-label="Default select example">
   <option selected>Selecione uma Ação</option>
-  <option value="{{acao_educacional.descricao_acao}}">Adaptação do ambiente físico</option>
-  <option value="{{acao_educacional.descricao_acao}}">Avaliação diferenciada</option>
-  <option value="{{acao_educacional.descricao_acao}}">Permissão de pausas durante a prova</option>
-  <option value="{{acao_educacional.descricao_acao}}">Prorrogação do tempo de integralização do curso</option>
-  <option value="{{acao_educacional.descricao_acao}}">Tempo adicional de prova</option>
+  <option value="{{acoes_educacionais.descricao_acao}}">Adaptação do ambiente físico</option>
+  <option value="{{acoes_educacionais.descricao_acao}}">Avaliação diferenciada</option>
+  <option value="{{acoes_educacionais.descricao_acao}}">Permissão de pausas durante a prova</option>
+  <option value="{{acoes_educacionais.descricao_acao}}">Prorrogação do tempo de integralização do curso</option>
+  <option value="{{acoes_educacionais.descricao_acao}}">Tempo adicional de prova</option>
 </select>
 
 </form>
