--- a/views/acoes_educacionais.hbs
+++ b/views/acoes_educacionais.hbs
@@ -4,10 +4,12 @@
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Matrícula</th>
-      <th scope="col">Nome</th>
-      <th scope="col">Data de Nascimento</th>
-      <th scope="col">Endereço de Email</th>
+      <th scope="col">id</th>
+      <th scope="col">Ação</th>
+      <th scope="col">Aluno</th>
+      <th scope="col">Tutor</th>
+      <th scope="col">Data Solicitação</th>
+      <th scope="col">Data Conclusão</th>
     </tr>
   </thead>
   {{#each alunos}}
@@ -15,7 +17,7 @@
     <tr>
       <th scope="row">{{@index}}</th>
       <td>{{id_acao}}</td>
-      <td><a href="/alunos/{{id_acao}}">{{nome}}</a></td>
+      <td><a href="/alunos/{{id_acao}}">{{id_acao}}</a></td>
       <td>{{data_nascimento}}</td>
       <td>{{email}}</td>
       <td><a href="/alunos/edit/{{id_acao}}"><i class="bi bi-pencil-square"></i></a></td>
@@ -25,5 +27,5 @@
 {{/each}}
 </table>
 <div>
-<button type="button submit" name="submit" id="submit" class="btn btn-outline-primary btn-lg" ><a href="/alunos/new">Novo Aluno <i class="bi bi-person-add"></i></button></a>
+<button type="button submit" name="submit" id="submit" class="btn btn-outline-primary btn-lg" ><a href="/alunos/new">Nova Solicitação <i class="bi bi-person-add"></i></button></a>
 </div>
