--- a/views/acoes_educacionais.hbs
+++ b/views/acoes_educacionais.hbs
@@ -23,9 +23,10 @@
       <td><a href="/alunos/edit/{{id_acao}}"><i class="bi bi-pencil-square"></i></a></td>
       <td><a href="#"><i class="bi bi-trash"></i></a></td>
     </tr>
-    </tbody>
-{{/each}}
+  </tbody>
+  {{/each}}
 </table>
 <div>
-<button type="button submit" name="submit" id="submit" class="btn btn-outline-primary btn-lg" ><a href="/alunos/new">Nova Solicitação <i class="bi bi-person-add"></i></button></a>
+  <button type="button submit" name="submit" id="submit" class="btn btn-outline-primary btn-lg"><a
+      href="/alunos/new">Nova Solicitação <i class="bi bi-person-add"></i></button></a>
 </div>
