--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,23 +1,24 @@
 <nav class="navbar navbar-dark navbar-expand-sm bg-body-dark bg-primary">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/alunos">Alunos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/acoes_educacionais">Ações Educacionais</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about">Sobre</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/alunos">Alunos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/acoeseducacionais">Ações Educacionais</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">Sobre</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
